stylesheets/main.css
 /* Container holding the image and the text */
.container {
  position: relative;
  max-width: 800px; /* Maximum width */
  margin: 0 auto; /* Center it */
}


/* %%%%%%%%%%%%%%%%%%%%%% SLIDER %%%%%%%%%%%%%%%%%%%%%% */
* {box-sizing: border-box;}

.img-comp-container {
  position: relative;
  height: 240px; /*should be the same height as the images*/
}

.img-comp-img {
  position: absolute;
  width: auto;
  height: 240px;
  overflow: hidden;
}

.img-comp-img img {
  display: block;
  vertical-align: middle;
}

.img-comp-slider {
  position: absolute;
  z-index: 9;
  cursor: ew-resize;
  /*set the appearance of the slider:*/
  width: 30px;
  height: 200px;
  background-color: #2196F3;
  opacity: 0.8;
  border-radius: 1%;
}
/* %%%%%%%%%%%%%%%%%%%%%% END SLIDER %%%%%%%%%%%%%%%%%%%%%% */



/* %%%%%%%%%%%%%%%%%%%%%% header %%%%%%%%%%%%%%%%%%%%%% */
.content {
  position: absolute; /* Position the background text */
  right: 0px;
  top: 250px;
  bottom: 0px; /* At the bottom. Use top:0 to append it to the top */
  background: rgb(0, 0, 0); /* Fallback color */
  background: rgba(999, 999, 999, 0.8); /* Black background with 0.5 opacity */
  color: rgba(0,0,0, 0.9); /* Grey text */
  width: 100%; /* Full width */
  padding: 10px; /* Some padding */
  alignment: below;
}

@media (min-width:601px){
.content{
  position: absolute;
  background: rgba(999, 999, 999, 0.3);
  width:49.999%;
  right: 0px;
  top: 80px;
  bottom: auto;}
/* %%%%%%%%%%%%%%%%%%%%%% end header %%%%%%%%%%%%%%%%%%%%%% */


a.blau:link {
    color: navy;
    background-color: transparent;
    text-decoration: none;
}
a.blau:visited {
    color: navy;
    background-color: transparent;
    text-decoration: none;
}

/* Bottom right text */
.text-block {
    position: absolute;
    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
    color: #f1f1f1; /* Grey text */
}

/* Centered text */
.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}



 /* Style the navigation menu */
.topnav {
  overflow: hidden;
  background-color: #333;
  position: relative;
}

/* Hide the links inside the navigation menu (except for logo/home) */
.topnav #myLinks {
  display: none;
}

/* Style navigation menu links */
.topnav a {
  color: white;
  padding: 8px 12px;
  text-decoration: none;
  font-size: 12px;
  display: block;
}

/* Style the hamburger menu */
.topnav a.icon {
  background: black;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
}

/* Add a grey background color on mouse-over */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/* Style the active link (or home/logo) */
.active {
  background-color: black;
  color: white;
}

/* Style the active link (or home/logo) */
.name {
  background-color: black;
  color: white;
  padding: 8px 12px;
  text-decoration: none;
  font-size: 14px;
  display: block;
}

